<resources>
    <string name="app_name">AppCompat Extension</string>
    <string name="sample_title">My Files</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_pickers">Click to explore</string>

    <!-- Info Dialog -->
    <string name="dialog_title">AppCompat Extension Library</string>
    <string name="dialog_message">A library that builds on the official AppCompat Design Library and provides additional common components:\n &#8226; AccountHeaderView\n &#8226; FloatingActionMenu\n &#8226; CircleImageView\n &#8226; Picker Dialogs\n &#8226; FlexibleToolbarLayout\n &#8226; Delightful Detail Drawables\n &#8226; TypefaceCompat</string>
    <string name="dialog_neutral_button">View on Github</string>
    <string name="dialog_negative_button">Dismiss</string>

    <!-- Navigation Drawer items -->
    <string name="nav_drawer_inbox">Inbox</string>
    <string name="nav_drawer_starred">Starred</string>
    <string name="nav_drawer_sent">Sent Mail</string>
    <string name="nav_drawer_drafts">Drafts</string>
    <string name="nav_drawer_all">All Mail</string>
    <string name="nav_drawer_trash">Trash</string>
    <string name="nav_drawer_spam">Spam</string>
    <string name="nav_drawer_subheader">Subheader</string>

    <!-- Floating Action Menu items -->
    <string name="fam_datepicker">Date</string>
    <string name="fam_timepicker">Time</string>
    <string name="fam_presentation">Presentation</string>
    <string name="fam_spreadsheet">Spreadsheet</string>
    <string name="fam_document">Text Document</string>

    <!-- External link items -->
    <string name="link_pickers">Pickers - Google design guidelines</string>
    <string name="href_pickers">https://www.google.com/design/spec/components/pickers.html</string>

    <!-- Card items -->
    <string name="card_header_title_date_picker">AppCompatDatePickerDialog</string>
    <string name="card_header_subtitle_date_picker">used to select a single date</string>
    <string name="card_header_title_time_picker">AppCompatTimePickerDialog</string>
    <string name="card_header_subtitle_time_picker">used to select a single time</string>
    <string name="card_button_light">Light</string>
    <string name="card_button_dark">Dark</string>

    <!-- activity titles -->
    <string name="title_activity_picker_dialog">Picker Dialogs</string>
</resources>
