<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/design_appbar_elevation"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- CardView with Material Design guidelines link -->
            <com.tr4android.appcompatextension.widget.MarginAdjustingCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:id="@+id/external_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="16dp"
                        android:padding="8dp"
                        app:srcCompat="@drawable/ic_exit_to_app_black_24dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/link_pickers"
                            android:textColor="?android:attr/textColorPrimary"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/href_link"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/href_pickers"
                            android:textColor="?android:attr/textColorSecondary"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>

            </com.tr4android.appcompatextension.widget.MarginAdjustingCardView>

            <!-- CardView with DatePickerDialog -->
            <com.tr4android.appcompatextension.widget.MarginAdjustingCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <ImageView
                            android:id="@+id/header_image_date"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginRight="16dp"
                            android:contentDescription="@null" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingBottom="2dp"
                                android:text="@string/card_header_title_date_picker"
                                android:textColor="?android:attr/textColorPrimary"
                                android:textSize="14sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/card_header_subtitle_date_picker"
                                android:textColor="?android:attr/textColorSecondary"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <android.support.v7.widget.ButtonBarLayout
                        style="?attr/buttonBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:layoutDirection="locale"
                        android:orientation="horizontal"
                        android:paddingBottom="4dp"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:paddingTop="4dp"
                        app:allowStacking="false">

                        <Button
                            android:id="@+id/buttonDateLight"
                            style="?attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/card_button_light" />

                        <Button
                            android:id="@+id/buttonDateDark"
                            style="?attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/card_button_dark" />

                        <android.support.v4.widget.Space
                            android:id="@id/spacer"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:visibility="invisible" />
                    </android.support.v7.widget.ButtonBarLayout>
                </LinearLayout>

            </com.tr4android.appcompatextension.widget.MarginAdjustingCardView>

            <!-- CardView with TimePickerDialog -->
            <com.tr4android.appcompatextension.widget.MarginAdjustingCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <ImageView
                            android:id="@+id/header_image_time"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginRight="16dp"
                            android:contentDescription="@null" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingBottom="2dp"
                                android:text="@string/card_header_title_time_picker"
                                android:textColor="?android:attr/textColorPrimary"
                                android:textSize="14sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/card_header_subtitle_time_picker"
                                android:textColor="?android:attr/textColorSecondary"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <android.support.v7.widget.ButtonBarLayout
                        style="?attr/buttonBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:layoutDirection="locale"
                        android:orientation="horizontal"
                        android:paddingBottom="4dp"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:paddingTop="4dp"
                        app:allowStacking="false">

                        <Button
                            android:id="@+id/buttonTimeLight"
                            style="?attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/card_button_light" />

                        <Button
                            android:id="@+id/buttonTimeDark"
                            style="?attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/card_button_dark" />

                        <android.support.v4.widget.Space
                            android:id="@id/spacer"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:visibility="invisible" />
                    </android.support.v7.widget.ButtonBarLayout>
                </LinearLayout>

            </com.tr4android.appcompatextension.widget.MarginAdjustingCardView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</merge>